new proj/src/objects/GE_PRM_Sales_Orders_Goals__c.object
<CustomObject>
    <description>GE Energy Orders &amp; Sales target metrics (000$US)</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this  section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Orders Goals</relationshipLabel>
        <relationshipName>Sales_Orders_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Sales_Buy_Resell__c</fullName>
        <inlineHelpText>Current Year Total Orders for the specific product selected previously, Where the channel partner directly buys and sells GE Products</inlineHelpText>
        <label>CY $ Total Orders -Buy &amp; Resell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Total_Sale_Influence__c</fullName>
        <inlineHelpText>Current Year Total Orders for the specific product selected previously, where the channel partner has an influence.</inlineHelpText>
        <label>CY $ Total Orders - Influence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Total_Sales__c</fullName>
        <formula>GE_PRM_Current_Year_Sales_Buy_Resell__c  +  GE_PRM_Current_Year_Total_Sale_Influence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated automatically: CY $ Total Orders = (CY $ Total Orders - Influence) + (CY $ Total Orders - Buy &amp; Resell)</inlineHelpText>
        <label>CY $ Total Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Prior_Year_Total_Sales_Buy_Resell__c</fullName>
        <inlineHelpText>Previous Year Total Orders for the specific product selected previously,Where the channel partner directly buys and sells GE Products</inlineHelpText>
        <label>PY $ Total Orders - Buy &amp; Resell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Prior_Year_Total_Sales_Influence__c</fullName>
        <inlineHelpText>Previous Year Total Orders for the specific product selected previously, where the channel partner has an influence on</inlineHelpText>
        <label>PY $ Total Orders - Influence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Prior_Year_Total_Sales__c</fullName>
        <formula>GE_PRM_Prior_Year_Total_Sales_Buy_Resell__c +   GE_PRM_Prior_Year_Total_Sales_Influence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated automatically: PY $ Total Orders = (PY $ Total Orders - Influence) + (PY $ Total Orders - Buy &amp; Resell)</inlineHelpText>
        <label>PY $ Total Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Sales_V__c</fullName>
        <formula>IF(GE_PRM_Current_Year_Total_Sales__c &gt; 0, (GE_PRM_Current_Year_Total_Sales__c - GE_PRM_Prior_Year_Total_Sales__c)/GE_PRM_Current_Year_Total_Sales__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated automatically: Orders V% = (CY $ Total Orders/PY $ Total Orders) - 1</inlineHelpText>
        <label>Orders V%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1_New__c</fullName>
        <inlineHelpText>GE Tier 1 P&amp;L (Power &amp; Water/ Energy Management/Oil &amp; Gas) the GE sale/channel manager depends on.</inlineHelpText>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <inlineHelpText>GE Tier 2 P&amp;L (linked on the Tier 1 P&amp;L selected) the GE sale/channel manager depends on (Example: Digital Energy/Tier 2 P&amp;L depends on Energy management/Tier 1 P&amp;L)</inlineHelpText>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_1_New__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <inlineHelpText>GE Tier 3 P&amp;L (linked on the Tier 2 P&amp;L selected) the GE sale/channel manager depends on  (Example: Prolec /Tier 3 P&amp;L depends on Digital Energy/Tier 2 P&amp;L)</inlineHelpText>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_2__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems (WES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_4__c</fullName>
        <inlineHelpText>GE Product covered/sell by the channel partner with this Account plan. Depends on the Tier 3 P&amp;L selected previously.</inlineHelpText>
        <label>Tier 4 Product</label>
        <picklist>
            <controllingField>GE_PRM_Tier_3__c</controllingField>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMIGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical Instruments (AI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management (Aero Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management (Software Solutions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blowers &amp; Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commtest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Service Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions, Modifications &amp; Uprates (CM&amp;U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eddy Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Orders Goals</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Orders Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales &amp; Orders Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>true</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit Orders Goals</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit Orders Goals since Account Plan is Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Validate_Tier_Values</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(TEXT(GE_PRM_Account_Plan__r.GE_PRM_Tier_3__c) &lt;&gt; &apos;&apos;, TEXT(GE_PRM_Account_Plan__r.GE_PRM_Tier_3__c) &lt;&gt; TEXT(GE_PRM_Tier_3__c)), OR(TEXT(GE_PRM_Account_Plan__r.GE_HQ_Buss_Tier__c) &lt;&gt; TEXT(GE_PRM_Tier_1_New__c),  
TEXT(GE_PRM_Account_Plan__r.GE_PRM_Tier_2__c) &lt;&gt; TEXT(GE_PRM_Tier_2__c)))</errorConditionFormula>
        <errorMessage>Tier Values should match the Account Plan Tier Values</errorMessage>
    </validationRules>
</CustomObject>